--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "doctrine/dbal": "^4.2",
         "filament/filament": "^3.2",
         "google/apiclient": "^2.18",
+        "kreait/laravel-firebase": "^6.0",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
