--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,11 @@
     ],
     "require": {
         "php": "^8.2",
+        "bensontrent/firestore-php": "^3.1",
         "berkayk/onesignal-laravel": "^2.4",
         "doctrine/dbal": "^4.2",
         "filament/filament": "^3.2",
         "google/apiclient": "^2.18",
-        "google/cloud-firestore": "^1.50",
-        "kreait/firebase-php": "^7.18",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
