--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "filament/filament": "^3.2",
         "google/apiclient": "^2.18",
         "google/cloud-firestore": "^1.50",
+        "google/protobuf": "*",
         "kreait/laravel-firebase": "^6.0",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
